@@ -42,6 +42,7 @@
 	, mv/2
 	, (rm)/1
 	]).
+:- set_prolog_flag(generate_debug_info, false).
 
 % :- op(900, fy, [ls, cd, pushd, rm, grep]).
 
